[gd_scene load_steps=5 format=3 uid="uid://bllxyncmft2sj"]

[ext_resource type="Script" uid="uid://dq7etwtphxvl1" path="res://Interactibles/GrapplingPoints/GrapplePoint.gd" id="1_t6n43"]

[sub_resource type="SphereMesh" id="SphereMesh_bucv0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4so6o"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mb46v"]
radius = 10.0

[node name="GrapplePoint" type="Node3D" groups=["grapplePoint"]]
script = ExtResource("1_t6n43")

[node name="GrappleBody" type="AnimatableBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrappleBody"]
mesh = SubResource("SphereMesh_bucv0")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrappleBody"]
shape = SubResource("SphereShape3D_4so6o")

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="."]
node_a = NodePath("../GrappleBody")
angular_limit_x/enabled = false
angular_limit_y/enabled = false
angular_limit_z/enabled = false

[node name="Area3D" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_mb46v")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
